test/errors/call_non_function.correct
error: call_non_function.li:2:1: cannot call non-function value: number
│ x();
│ ~~~
│ ^
